sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:4: error: not found: value getNombreValeur
var n : Int=getNombreValeur()
            ^