sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {

var n : Int=getNombreValeur()



for(i<- n-2 to 0){
	for(j<- 0 to i){		
		
		
		if(!plusPetit(j,i)){
			echange(j,i)
		
			}
		
		}
}
}